--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sahash Rai - Personal Website</title>
+    <title>Sahash Rai </title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -50,10 +50,10 @@
 <body>
     <div class="container">
         <h1>Welcome to Sahash Rai's Website!</h1>
-        <p>👨‍💻 Aspiring ML/AI Engineer<br>🎥 Netflix Enthusiast<br>🍏 Future Apple Employee</p>
+        <p>👨‍💻 Aspiring ML/AI Engineer<br>🍏 Future Apple Employee</p>
         <div class="links">
-            <a href="https://github.com/SahashRai" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+            <a href="https://github.com/SahashRaee" target="_blank">GitHub</a>
+            <a href="www.linkedin.com/in/sahashraee" target="_blank">LinkedIn</a>
         </div>
     </div>
 </body>
